changed the meta description tag.
Just changed the meta tag "description" and a comment to try out my first commit after the initial commit.

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </nav>
   </header>
   <div class="profile">
-    <!--Replace later with a professional photograph -->
+    <!--Replace later with a professional photograph of myself -->
     <br>
     <br>
     <img src ="img/MyPortrait.jpeg" class="profile__portrait" alt="A photograph of Arno Partyka">
