--- a/work.html
+++ b/work.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <meta name ="description" content="Portfolio News Page">
+  <meta name ="description" content="Portfolio Work Page">
   <!--replace later with my own icon-->
   <link rel = "shortcut icon" href ="https://www.wikipedia.org/static/favicon/wikipedia.ico">
   <title>Arno's Portfolio</title>
