fixing syntax error
fixed syntax error,  removed unnecessary role information.

--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
   <link rel="stylesheet" type="text/css" href="css/style.production.css">
 </head>
 <body>
-  <!-- Header including the logo an the main(topbar) navigation -->
+  <!-- Header including the logo an the main(top-bar) navigation -->
   <header class="page-header">
     <!--Have to figure out how I can position my logo nicely in the navigation bar.-->
     <img src="img/APlogov2.png" alt="logo" class="page-header__item">
-    <nav role="navigation" class="main-navigation page-header__item">
+    <nav class="main-navigation page-header__item">
       <ul role="menubar" class="navigation-list">
         <li role="presentation">
           <a href="index.html" target="_self" role ="menuitem" class="navigation-list__item navigation-list__item--active">Home</a>
@@ -34,7 +34,8 @@
         <li role="presentation">
           <a href="work.html" target="_self" role="menuitem" class="navigation-list__item">Work</a>
         </li>
-    </nav>
+      </ul>ul>
+      </nav>
   </header>
   <div class="profile">
     <!--Replace later with a professional photograph -->
