making changes according to the w3c
removed unnecessary information.
  clean up and spelling corrections:

--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
 </head>
 <body>
   <header>
-    <nav role="navigation" class="topnavigation">
+    <nav class="topnavigation">
       <!--Have to figure out how I can position my logo nicely in the navigation bar.-->
       <!--<img src="img/APlogo.png" alt="" height="30">-->
       <a href="index.html" target="_self">Home</a>
@@ -37,8 +37,8 @@
       Email: <a href="mailto:arno.partyka@gmx.de">arno.partyka@gmx.de</a><br>
       Skype: <a href="skype:live:.cid.3d60171c1b1c9de2">live:.cid.3d60171c1b1c9de2</a><br>
     </p>
-    <!--Section for contact Form with required E-mail, optional Telphone and mandatory mkessage field-->
-    <form action="" method="post" id="contact-form">
+    <!--Section for contact Form with required E-mail, optional telephone and mandatory message field-->
+    <form action="a" method="post" id="contact-form">
       <label class="standard-label" for="contact-email">E-mail: </label>
       <input type="email" id="contact-email" placeholder="your.example@email.com" required>
       <label class="standard-label" for="phone-number">Telephone(optional): </label>
@@ -46,7 +46,7 @@
       <input type="tel" id="phone-number" placeholder="Tel: 000-000-0000" pattern="\d{3}[\-]d{3}[\-]\d{4}">
       <label class="standard-label" for="contact-message">Message: </label>
       <textarea maxlength="600" id="contact-message" placeholder="Here could be your message." required></textarea>
-      <input type="submit" value="send-message"></>
+      <input type="submit" value="send-message">
     </form>
   </main>
   <footer class="page-footer">
