--- a/work.html
+++ b/work.html
@@ -38,7 +38,7 @@
   </header>
   <!-- Main content-->
   <section>
-    <h1>Work</h1>
+    <h2>Work</h2>
     <div class="grid">
       <!--Grid items will live here -->
       <div class="grid__item">
@@ -51,12 +51,12 @@
       <div class="grid__item">
         <h2>Algorithm visualizer</h2>
         <p>
-          In this project you can see how different sort algortihms are working. It's written in c#
+          In this project you can see how different sort algorithm are working. It's written in c#
         </p>
         <a href="#">See project on GitHub</a>
       </div>
       <div class="grid__item">
-        <h2>Calculater</h2>
+        <h2>Calculator</h2>
         <p>
           I wrote a simple calculator in JavaScript. Take a look
         </p>
