--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
   <header class="page-header">
     <!--Have to figure out how I can position my logo nicely in the navigation bar.-->
     <img src="img/APlogov2.png" alt="logo" class="page-header__item">
-    <nav role="navigation" class="main-navigation page-header__item">
+    <nav class="main-navigation page-header__item">
       <ul role="menubar" class="navigation-list">
         <li role="presentation">
           <a href="index.html" target="_self" role ="menuitem" class="navigation-list__item">Home</a>
@@ -33,6 +33,7 @@
         <li role="presentation">
           <a href="work.html" target="_self" role="menuitem" class="navigation-list__item">Work</a>
         </li>
+        </ul>
     </nav>
   </header>
   <main>
@@ -54,7 +55,7 @@
         <li>Go skateboarding</li>
       </ul>
     </div>
-    <a href="files/cvTest.pdf" target="_blank" class="button" dowload>Donwload my CV</a>
+    <a href="files/cvTest.pdf" download="ApCV" target="_blank" class="button">Donwload my CV</a>
     <!--educational experience -->
     <div class="tableeducation">
       <div class="row">
@@ -89,6 +90,7 @@
           </table>
         </div>
       </div>
+    </div>
       <!--Skillset-->
       <div class="tableskills">
         <div class="column">
