--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,7 @@
       <!--<img src="img/APlogo.png" alt="" height="30">-->
       <a href="index.html" target="_self">Home</a>
       <a href="about.html" target="_self">About</a>
-      <a class="active" href="contact.html" target="_blank">Contact</a>
+      <a class="active" href="contact.html" target="self">Contact</a>
       <a href="work.html" target="_self">Work</a>
     </nav>
   </header>
