--- a/index.html
+++ b/index.html
@@ -16,31 +16,15 @@
   <link rel="stylesheet" type="text/css" href="css/style.production.css">
 </head>
 <body>
-  <!-- Header including the logo an the main(top-bar) navigation -->
-  <header class="page-header">
-    <!--Have to figure out how I can position my logo nicely in the navigation bar.-->
-    <img src="img/APlogov2.png" alt="logo" class="page-header__item">
-    <nav class="main-navigation page-header__item">
-      <ul role="menubar" class="navigation-list">
-        <li role="presentation">
-          <a href="index.html" target="_self" role ="menuitem" class="navigation-list__item navigation-list__item--active">Home</a>
-        </li>
-        <li role="presentation">
-          <a href="about.html" target="_self" role="menuitem" class="navigation-list__item">About</a>
-        </li>
-        <li role="presentation">
-          <a href="contact.html" target="_self" role="menuitem" class="navigation-list__item">Contact</a>
-        </li>
-        <li role="presentation">
-          <a href="work.html" target="_self" role="menuitem" class="navigation-list__item">Work</a>
-        </li>
-      </ul>
-      </nav>
+  <header>
+    <nav class="topnavigation">
+      <a class="active" href="index.html" target="_self">Home</a>
+      <a href="about.html" target="_self">About</a>
+      <a href="contact.html" target="_self">Contact</a>
+      <a href="work.html" target="_self">Work</a>
+    </nav>
   </header>
   <div class="profile">
-    <!--Replace later with a professional photograph -->
-    <br>
-    <br>
     <img src ="img/MyPortrait.jpeg" class="profile__portrait" alt="A photograph of Arno Partyka">
     <h1>Hello World!</h1>
     <p>
