--- a/work.html
+++ b/work.html
@@ -16,29 +16,17 @@
   <link rel="stylesheet" type="text/css" href="css/style.production.css">
 </head>
 <body>
-  <header class="page-header">
-    <!-- Add Logo here -->
-    <img src="img/APlogov2.png" alt="logo" class="page-header__item">
-    <nav class="main-navigation page-header__item">
-      <ul role="menubar" class="navigation-list">
-         <li role="presentation">
-            <a href="index.html" role="menuitem" class="navigation-list__item">Home</a>
-         </li>
-         <li role="presentation">
-            <a href="about.html" role="menuitem" class="navigation-list__item">About</a>
-         </li>
-         <li role="presentation">
-            <a href="work.html" role="menuitem" class="navigation-list__item navigation-list__item--active">Work</a>
-         </li>
-         <li role="presentation">
-            <a href="contact.html" role="menuitem" class="navigation-list__item">Contact</a>
-         </li>
-      </ul>
-   </nav>
-  </header>
+  <header>
+    <nav class="topnavigation">
+      <a href="index.html" target="_self">Home</a>
+      <a href="about.html" target="_self">About</a>
+      <a href="contact.html" target="_self">Contact</a>
+      <a class="active" href="work.html" target="_self">Work</a>
+    </nav>
+  </header>  
   <!-- Main content-->
+  <h1>Work</h1>
   <section>
-    <h2>Work</h2>
     <div class="grid">
       <!--Grid items will live here -->
       <div class="grid__item">
