changed the footer
changed the footer and additional changes onthe text

--- a/about.html
+++ b/about.html
@@ -726,10 +726,12 @@
     </main>
     <footer class="page-footer">
       <p>Find me on</p>
-      <!--target="_blank for opening the link in a new window tap (by default "Self") "-->
-      <a href="https://github.com" target="_blank"><img src="img/githubLogo.svg" alt="GitHub profile"></a>
-      <a href="https://twitter.com" target="_blank"><img src="img/linkedinLogo.svg" alt="Twitter profile"></a>
-      <a href="https://linkedin.com" target="_blank"><img src="img/twitterLogo.svg" alt="Linkedin profile"></a>
+      <div class="social-media">
+        <!--target="_blank for opening the link in a new window tap (by default "Self") "-->
+        <a href="https://github.com" target="_blank"><img src="img/githubLogo.svg" alt="GitHub profile"></a>
+        <a href="https://twitter.com" target="_blank"><img src="img/linkedinLogo.svg" alt="Twitter profile"></a>
+        <a href="https://linkedin.com" target="_blank"><img src="img/twitterLogo.svg" alt="Linkedin profile"></a>
+      </div>
     </footer>
     <script src="js/tota11y.min.js"></script>
   </body>
