--- a/work.html
+++ b/work.html
@@ -32,7 +32,9 @@
       <div class="grid__item">
         <h2>Mobile web app</h2>
         <p>
-          Within this project, I was responsible for the frontend. It's written in React.js Additionally, I've created the HTML and CSS templates.
+          Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam 
+          nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat,
+           sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd
         </p>
         <a href="#">See project on GitHub</a>
       </div>
@@ -67,9 +69,9 @@
       <div class="grid__item">
         <h2>Mac adress associater</h2>
         <p>
-          This project is about a tool which associate the IPv4 adress with the mac adress.
+          This project will be about a tool which associate the IPv4 adress with the mac adress.
           It also acociates the subnetmask, the interface that handles the connection to the next hop and
-          the metric which sets the priority and the costs of the route.
+          the metric which sets the priority and the costs of the route. 
         </p>
         <a href="#">See project on GitHub</a>
       </div>
@@ -81,13 +83,15 @@
       <br>
       You will get an additional view to my non webprojects.
     </p>
-  <footer class="page-footer">
-    <p>Find me on</p>
-    <!--target="_blank for opening the link in a new window tap (by default "Self") "-->
-    <a href="https://github.com" target="_blank"><img src="img/githubLogo.svg" alt="GitHub profile"></a>
-    <a href="https://twitter.com" target="_blank"><img src="img/linkedinLogo.svg" alt="Twitter profile"></a>
-    <a href="https://linkedin.com" target="_blank"><img src="img/twitterLogo.svg" alt="Linkedin profile"></a>
-  </footer>
+    <footer class="page-footer">
+      <p>Find me on</p>
+      <div class="social-media">
+        <!--target="_blank for opening the link in a new window tap (by default "Self") "-->
+        <a href="https://github.com" target="_blank"><img src="img/githubLogo.svg" alt="GitHub profile"></a>
+        <a href="https://twitter.com" target="_blank"><img src="img/linkedinLogo.svg" alt="Twitter profile"></a>
+        <a href="https://linkedin.com" target="_blank"><img src="img/twitterLogo.svg" alt="Linkedin profile"></a>
+      </div>
+    </footer>
   <script src="js/tota11y.min.js"></script>
 </body>
 </html>
